tests/ui/typeck/issue-104582.stderr
error[E0214]: parenthesized type parameters may only be used with a `Fn` trait
  --> $DIR/issue-104582.rs:2:17
   |
LL |     let my_var: String(String?);
   |                 ^^^^^^^^^^^^^^^ only `Fn` traits may use parentheses
   |
help: use angle brackets instead
   |
LL -     let my_var: String(String?);
LL +     let my_var: String<String?>;
   |

error[E0107]: struct takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/issue-104582.rs:2:17
   |
LL |     let my_var: String(String?);
   |                 ^^^^^^--------- help: remove the unnecessary generics
   |                 |
   |                 expected 0 generic arguments

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0214.
For more information about an error, try `rustc --explain E0107`.
